# http-server-rs

./: .gitignore  Cargo.toml  README.md  install.sh  justfile
.github/actions/build-bin/: action.yml
.github/actions/setup-just/: install.bash
.github/scripts/: string-replace.mjs
.github/setup/just/: install.bash  install.ps1
.github/setup/rust/: install.bash  install.ps1
.github/workflows/: release.yaml
npm/: package.json  postinstall.mjs
scripts/: install.sh
src/: cli.rs  config.rs  fmt.rs  main.rs
src/b64/: mod.rs
src/compress/: mod.rs
src/explorer/: dir.hbs  mod.rs  reload.mjs  unix.rs  windows.rs
src/html/: dir.hbs
src/http1/: bytes.rs  http1_server.rs  mod.rs  res_ext.rs
src/logger/: logger.rs  logger_default.rs  logger_noop.rs  mod.rs
src/utils/: broadcast.rs
src/watcher/: mod.rs
testing/site/: home.html
testing/site/site/: index.html
