[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[lints.rust]
elided_lifetimes_in_paths = "allow"
rust_2018_idioms = { priority = -1, level = "deny" }

[lints.clippy]
module_inception = "allow"
uninlined-format-args = "allow"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
handlebars = "6.3.2"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1"] }
hyper-util = { version = "0.1.16", features = ["server-graceful"] }
mime_guess = "2.0.5"
normalize-path = "0.2.1"
notify-debouncer-full = "0.6.0"
num_cpus = "1.17.0"
pathdiff = "0.2.3"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "fs", "net"] }
tokio-util = { version = "0.7.16", features = [
  "io",
  "io-util",
  "futures-util",
] }
brotli = "8.0.2"
urlencoding = "2.1.3"
base64 = "0.22.1"

[target.'cfg(unix)'.dependencies]
unix_mode = "0.1.4"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
